# volumetric_drilling

./: .gitignore  CMakeLists.txt  README.md  edt_utils.h  launch.yaml  launch_registration.yaml  launch_ros2.yaml  setup.py  volumetric_drilling.cpp  volumetric_drilling.h
ADF/: single_stereo_camera.yaml  stereo_cameras.yaml  volume_256_3.yaml  volume_256_LT151.yaml  volume_256_RT143.yaml  volume_cube_512_256.yaml  volume_sim_assisted_test01.yaml  volume_sim_assisted_test01_with_fiducials.yaml  vr_cameras.yaml
ADF/drills/: 20240925_calibrated_drill.yaml
ADF/drills/20240925_calibrated_drill/: 20240925_calibrated_drill.yaml
ADF/drills/drills_in_si_units/: 1mm_drill_in_real_units.yaml  2mm_drill_in_real_units.yaml  4mm_drill_in_real_units.yaml  6mm_drill_in_real_units.yaml
ADF/drills/high_res/: marker.mtl
ADF/world/: world.yaml  world_registration.yaml  world_stereo.yaml
EdtReader/: CMakeLists.txt  EdtReadExample.cpp  EdtReader.cpp  EdtReader.h  GridExample.cpp
EdtReader/grids/: cube40_32.edt
UML/: AnatomyModifier.uxf
data_analysis_tools/: README.md  setup.py
data_analysis_tools/volumetric_sim_tools/DataUtils/: AnatomicalVolume.py  DataMerger.py
data_analysis_tools/volumetric_sim_tools/Scripts/: generate_experiment_statistics.py  mark_removed_voxels.py
docs/: data_conversion.md
plugin/: CMakeLists.txt  package.xml
plugin/camera_hmd/: hmd.cpp
plugin/camera_hmd/shaders/: hmd_distortion.fs
plugin/multiview_panels/: README.md  multiview.cpp  multiview.h  volume_slicer.cpp  volume_slicer.h
plugin/multiview_panels/test_executables/: create_orthogonal_slices_test.cpp  create_orthogonal_slices_test_deprecated.cpp  test_volume_slicer_01.cpp
plugin/sim_assisted_nav/: ros_interface.cpp  ros_interface.h  sim_assisted_nav.cpp  sim_assisted_nav.h  sim_assisted_nav_gui.py  zed_camera_interface.cpp  zed_camera_interface.h
plugin/sim_assisted_nav/camera_interfaces/: camera_interface_factory.cpp  camera_interface_factory.h  decklink_camera_interface.cpp  decklink_camera_interface.h  ros_stereo_camera_interface.cpp  ros_stereo_camera_interface.h  stereo_camera_config.cpp  stereo_camera_config.h  stereo_camera_interface.h  zed_camera_interface.cpp  zed_camera_interface.h
plugin/sim_assisted_nav/shaders/: hmd_distortion.fs  hmd_distortion.vs  sim_assisted_shader.fs
plugin/volumetric_drilling/: drill_manager.cpp  drill_manager.h  ros_interface.cpp  ros_interface.h  volumetric_drilling.cpp  volumetric_drilling.h
pydrilling/: Recording.py  Test.py  data_validation.py  data_viewer.py  utils.py
pydrilling/DataUtils/: AnatomicalVolume.py  DataMerger.py
pydrilling/Docs/: Readme.md
pydrilling/Docs/Scripts/: modify_anatomy_with_hdf5_tutorial.md
pydrilling/Metrics/: PerformanceMetrics.py
pydrilling/Scripts/: modify_pngs_with_hdf5.py  seg_nrrd_to_pngs.py
registration_pipeline/: README.md  requirements.txt  requirements_ros.txt  setup.py
registration_pipeline/pipelines/: pivot_calibration.sh  record_rosbags.sh  sksurgery_pivot_calibration.py  tf_to_csv.py
registration_pipeline/sim_assisted/utils/: Solver.py  dataLoader.py
resources/ros2_test_assets/: README.md
resources/ros2_test_assets/phantom01/: phantom01.yaml  registration_data.txt  registration_output.json
resources/volumes/: cmd_list.txt  create_list_of_images.py
resources/volumes/ear3_171/: ear3_171.txt
resources/volumes/ear3_256/: ear3_256.txt
resources/volumes/ear3_512/: ear3_512.txt
scripts/: data_record.py  data_viewer_sdf.py  markups2yaml.py  seg_nrrd_to_pngs.py
scripts/AnalyzeData/: ExperimentAnalysis.py  MetricsCalculator.py  PerformanceMetrics.py  create_colormap_bar.py  create_errors_boxplot.py  learning_effect_plots.py  process_userstudy_data01.py  process_userstudy_data02.py  statistical_analysis.py  view_voxel_data.py
scripts/AnalyzeData/journal_2026/: README.md  calculate_dist_and_colorized.mlx  meshlab_dist_colorize.py  slicer_crop_export.py
scripts/AnalyzeData/journal_sim_assisted_nav/: analyze_rosbag.py  analyze_simulation_performance.py  create_colormap_bar.py  create_histogram_from_mesh1.py  create_histogram_from_mesh2.py  create_histogram_from_mesh3.py  create_table_from_mesh.py  performance.txt  (+2 more)
scripts/AnatomyGeneration/: README.md  generate_cube.py
scripts/DataUtils/: obtain_modified_anatomy.py  seg_nrrd_to_pngs.py
scripts/EdtGeneration/: README.MD  create_all_edt.py  edt_generation.py
scripts/UserStudiesDataAnalysis/: README.md  create_errors_boxplot.py  learning_effect_plots.py  plot_voxels_removed.py  process_userstudy_data01.py  process_userstudy_data02.py  statistical_analysis.py  view_voxel_data.py
scripts/atracsys_tools/: new_bowl.json  tool_maker.py  tool_maker_ros2.py
scripts/control_scene/: atracsys_control.py
scripts/data/: 20220505_192452.hdf5
scripts/demo/: registration_demo.py
scripts/ros1_tools/: publish_recorded_data_ros1.py  ros1_atracsys_bag2csv.py
scripts/ros2_tools/: atracsys_control.py  atracsys_control_deprecated.py  data_record_only_voxels.py  move_drill_with_motions_in_csv.py  publish_recorded_data_ros2.py
share/: anatomy_marker2.json  geometry-BrainLabPointer.json  juan_atracsys_test_setup.json  juan_four_marker_tool.json
share/atracsys_config/: AtracsysNotes.md  atracsys_only_zed_mini.json  atracsys_sim_assisted_full_flat_plate.json  atracsys_sim_assisted_full_framework.json
share/atracsys_geometries/: drill_marker2.json  geometry-BrainLabPointer.json  juan_atracsys_test_setup.json  juan_only_drill.json  juan_three_marker_tool.json  zed_mini_marker.json
share/plugin_config/: registration_config.yaml  registration_config_new_box_design.yaml  spacenav_config.yaml  tf_config.yaml
test_plugins/cpp_test_package/: CMakeLists.txt  package.xml
test_plugins/cpp_test_package/src/: drill_location_listener.cpp
test_plugins/python_test_package/: package.xml  setup.cfg  setup.py
test_plugins/python_test_package/python_test_package/: __init__.py  drill_location_listener.py
test_scripts/: CMakeLists.txt  test_edt_utils.cpp
vcs/: devel.vcs  user.vcs
volumetric_drilling_msgs/: CMakeLists.txt  package.xml
(+37 files in other folders)
