<?xml version="1.0"?>
<package format="3">
  <name>simulation_assisted_navigation_framework</name>
  <version>0.0.0</version>
  <description>AMBF plugin for the simulation assisted navigation system.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jbarrag3@jh.edu">Juan Antonio Barragan</maintainer>
  <!-- <maintainer email="adnan@todo.todo">adnan</maintainer> -->


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>volumetric_drilling_msgs</depend>
  <depend>ambf_server</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>